finalizing and writing

--- a/RBPdetection.ipynb
+++ b/RBPdetection.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "id": "floating-array",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "solved-arabic",
    "metadata": {},
    "outputs": [],
@@ -82,6 +82,38 @@
     "2. The functions RBP_collection and RBP_filters will process the MilalrdLab data into two sets of phage RBPs and nonRBPs based on available annotation, and applying several filters to ensure quality (deleting dubious annotations, short proteins, etc...)\n",
     "3. The final RBP and nonRBP datasets are also timestamped for easy recollection in the future.\n",
     "4. Finally, the RBPs and nonRBPs are transformed into protein embeddings: cfr protein_embeddings_cloud (too intensive for local computer, so compute with GPU in Kaggle notebooks)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "11596f29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Millard_tsv = data_dir+'/MillardLab_data_2021-12.tsv'\n",
+    "df = pd.read_csv(Millard_tsv, sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3257b23f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(21047, 26)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
@@ -771,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9c1fa285",
+   "id": "5aa94a96",
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "1721d003",
+   "id": "ff03a7e0",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1269e9c",
+   "id": "260b8b76",
    "metadata": {},
    "source": [
     "#### Comparison between methods"
@@ -1309,7 +1341,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "c3a45255",
+   "id": "01c5f637",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "fb91828a",
+   "id": "05f57c74",
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "31d38af0",
+   "id": "63596766",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1376,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "537db315",
+   "id": "28dd7a1c",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1440,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "d8261297",
+   "id": "dcba9e38",
    "metadata": {},
    "outputs": [
     {
@@ -1423,14 +1455,14 @@
     }
    ],
    "source": [
-    "# procentually, the XGBoost classifiers misses fewer than 10% of the RBPs to be detected\n",
+    "# The XGBoost classifiers misses fewer than 10% of the RBPs to be detected\n",
     "(venn_4+venn_5+venn_6+venn_7)/sum(testlabels==1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a2a0911",
+   "id": "5b966364",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1440,7 +1472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c049e64",
+   "id": "a127730d",
    "metadata": {},
    "source": [
     "If our goal is to further increase the performance of the XGBoost model, we can additionally look at things such as:\n",
