check tail fiber predictions

--- a/RBPdetect_notebook.ipynb
+++ b/RBPdetect_notebook.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "floating-array",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "solved-arabic",
    "metadata": {},
    "outputs": [],
@@ -1144,8 +1144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "5aa94a96",
+   "execution_count": 12,
+   "id": "a56372d3",
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1375,7 @@
        "[26725 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1925,6 +1925,17 @@
     "- Which 23+32 sequences were detected by the domains-based approach that were missed by XGBoost?\n",
     "- What types of domains do we see in these 20+27 sequences and might those be underrepresented in the training data for the XGBoost classifier?\n",
     "- What 74 sequences does PhANNs classify correctly that XGBoost classifier and domains miss?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "409b6d30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# specifically check performance on the 'tail fiber' annotations on which PhANNs was trained\n",
+    "..."
    ]
   },
   {
