update notebooks + add standalone version

--- a/RBPdetect_make_predictions.ipynb
+++ b/RBPdetect_make_predictions.ipynb
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "# press the .hmm file for further use\n",
-    "output, err = rbpu.hmmpress_python(hmmer_path, new_pfam_file)"
+    "output, err = rbpu.hmmpress_python(hmmer_path, pfam_file)"
    ]
   },
   {
@@ -201,9 +201,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('ML1': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python397jvsc74a57bd0cdf400e2b2cf645b2ec6a448fcb5b3c1b3d3d5834714944466c9c0370880fa51"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
