Add histogram of alignment scores analysis

--- a/RBPdetect_notebook.ipynb
+++ b/RBPdetect_notebook.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "floating-array",
    "metadata": {},
    "outputs": [],
@@ -46,13 +46,13 @@
     "from sklearn.preprocessing import StandardScaler, label_binarize\n",
     "from matplotlib_venn import venn3, venn3_circles, venn3_unweighted\n",
     "from sklearn.model_selection import GridSearchCV, StratifiedKFold, GroupKFold, cross_val_predict, train_test_split\n",
-    "from sklearn.metrics import auc, make_scorer, precision_recall_curve, confusion_matrix, f1_score\n",
+    "from sklearn.metrics import auc, make_scorer, precision_recall_curve, confusion_matrix, f1_score, matthews_corrcoef \n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "solved-arabic",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "9ff9f359",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "outer-confidence",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "moral-strategy",
    "metadata": {
     "scrolled": true
@@ -301,7 +301,7 @@
        "4  ATGGCAAATCTTGTTTTTAAATTTAGTTGGGATCATCGGCCATTCC...  28-NOV-2021  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "090cc0c3",
    "metadata": {},
    "outputs": [],
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "ad336582",
    "metadata": {},
    "outputs": [
@@ -2068,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "id": "01c5f637",
    "metadata": {},
    "outputs": [],
@@ -2085,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "id": "3d1ef198",
    "metadata": {},
    "outputs": [
@@ -2093,17 +2093,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score domain-based method: 0.7197\n",
-      "F1 score PhANNs: 0.6984\n",
-      "F1 score XGBoost: 0.8403\n"
+      "Scores domain-based method\n",
+      "F1 score: 0.7197\n",
+      "MCC score: 0.7021\n",
+      "Sensitivity: 0.6643\n",
+      "Specificity: 0.9854\n",
+      "\n",
+      "Scores PhANNs\n",
+      "F1 score: 0.6984\n",
+      "MCC score: 0.6788\n",
+      "Sensitivity: 0.8163\n",
+      "Specificity: 0.9581\n",
+      "\n",
+      "Scores XGBoost\n",
+      "F1 score: 0.8403\n",
+      "MCC score: 0.8296\n",
+      "Sensitivity: 0.916\n",
+      "Specificity: 0.9788\n"
      ]
     }
    ],
    "source": [
-    "# compute F1 scores\n",
-    "print('F1 score domain-based method:', round(f1_score(testlabels, list(domain_results['preds'])), 4))\n",
-    "print('F1 score PhANNs:', round(f1_score(testlabels, list(phanns_results['preds'])), 4))\n",
-    "print('F1 score XGBoost:', round(f1_score(testlabels, list(xgb_results['preds'])), 4))"
+    "# compute performances\n",
+    "print('Scores domain-based method')\n",
+    "print('F1 score:', round(f1_score(testlabels, list(domain_results['preds'])), 4))\n",
+    "print('MCC score:', round(matthews_corrcoef(testlabels, list(domain_results['preds'])), 4))\n",
+    "tn, fp, fn, tp = confusion_matrix(testlabels, list(domain_results['preds'])).ravel()\n",
+    "print('Sensitivity:', round(tp/(tp+fn), 4))\n",
+    "print('Specificity:', round(tn/(tn+fp), 4))\n",
+    "print()\n",
+    "print('Scores PhANNs')\n",
+    "print('F1 score:', round(f1_score(testlabels, list(phanns_results['preds'])), 4))\n",
+    "print('MCC score:', round(matthews_corrcoef(testlabels, list(phanns_results['preds'])), 4))\n",
+    "tn, fp, fn, tp = confusion_matrix(testlabels, list(phanns_results['preds'])).ravel()\n",
+    "print('Sensitivity:', round(tp/(tp+fn), 4))\n",
+    "print('Specificity:', round(tn/(tn+fp), 4))\n",
+    "print()\n",
+    "print('Scores XGBoost')\n",
+    "print('F1 score:', round(f1_score(testlabels, list(xgb_results['preds'])), 4))\n",
+    "print('MCC score:', round(matthews_corrcoef(testlabels, list(xgb_results['preds'])), 4))\n",
+    "tn, fp, fn, tp = confusion_matrix(testlabels, list(xgb_results['preds'])).ravel()\n",
+    "print('Sensitivity:', round(tp/(tp+fn), 4))\n",
+    "print('Specificity:', round(tn/(tn+fp), 4))"
    ]
   },
   {
@@ -2573,7 +2604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 50,
    "id": "4cf418b1",
    "metadata": {},
    "outputs": [
@@ -2581,13 +2612,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score XGBoost + HMM: 0.8483\n"
+      "Scores XGBoost\n",
+      "F1 score: 0.8483\n",
+      "MCC score: 0.8382\n",
+      "Sensitivity: 0.9215\n",
+      "Specificity: 0.9798\n"
      ]
     }
    ],
    "source": [
     "xgb_results = pd.read_csv(results_dir+'/xgboost_HMMscores_test_predictions.csv')\n",
-    "print('F1 score XGBoost + HMM:', round(f1_score(testlabels, list(xgb_results['preds'])), 4))"
+    "print('Scores XGBoost')\n",
+    "print('F1 score:', round(f1_score(testlabels, list(xgb_results['preds'])), 4))\n",
+    "print('MCC score:', round(matthews_corrcoef(testlabels, list(xgb_results['preds'])), 4))\n",
+    "tn, fp, fn, tp = confusion_matrix(testlabels, list(xgb_results['preds'])).ravel()\n",
+    "print('Sensitivity:', round(tp/(tp+fn), 4))\n",
+    "print('Specificity:', round(tn/(tn+fp), 4))"
    ]
   },
   {
@@ -2596,6 +2636,39 @@
    "metadata": {},
    "source": [
     "Enhancing the protein embeddings with scores of our HMM collection results in an increase in F1-score of 0.8% on the independent test set, indicating that the protein embeddings by themselves already capture the information captured by the HMMs well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f85fe49",
+   "metadata": {},
+   "source": [
+    "## 6 - Extra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a329250",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Histogram of alignments scores within training set and between training and test set\n",
+    "train_scores = np.loadtxt('/Users/Dimi/Desktop/rbps_training_score_matrix.txt')\n",
+    "test_scores = np.loadtxt('/Users/Dimi/Desktop/rbps_traintest_score_matrix.txt')\n",
+    "\n",
+    "train_scores_list = []\n",
+    "for i in range(0, train_scores.shape[0]-1):\n",
+    "    for j in range(i+1, train_scores.shape[0]):\n",
+    "        train_scores_list.append(train_scores[i,j])\n",
+    "test_scores_list = list(np.ndarray.flatten(test_scores))     \n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(12,8))\n",
+    "ax.hist(train_scores_list, bins=500, color='darkorange', label='alignment scores within training set')\n",
+    "ax.hist(test_scores_list, bins=500, color='dodgerblue', label='alignment scores between training and test set')\n",
+    "ax.legend()\n",
+    "ax.set_xlabel('percentage identity')\n",
+    "ax.set_ylabel('count')"
    ]
   }
  ],
