Change file naming and extend explanation

--- a/RBPdetect_make_predictions.ipynb
+++ b/RBPdetect_make_predictions.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "pfam_file = 'data/RBPdetect_phageRBPs.hmm'\n",
     "xgb_file = 'data/RBPdetect_xgb_model.json'\n",
-    "fasta_file = 'data/examples.fasta'\n",
+    "fasta_file = 'data/sequences.fasta'\n",
     "hmmer_path = ... # e.g. '/Users/Sally/hmmer-3.3.1'\n",
     "embeddings_file = ... # e.g. 'data/embeddings.csv'"
    ]
