Added combined XGB+HMM method for predictions

--- a/RBPdetect_make_predictions.ipynb
+++ b/RBPdetect_make_predictions.ipynb
@@ -6,17 +6,18 @@
    "metadata": {},
    "source": [
     "# Dual identification of novel phage receptor-binding proteins based on protein domains and machine learning\n",
+    "\n",
     "# *Predicting new sequences*\n",
     "\n",
     "\n",
-    "This notebook, together with the 'RBPdetect_protein_embeddings' notebook can be used to make predictions for protein sequences based on our domain-based and machine-learning-based approach. The following steps should be followed:\n",
+    "This notebook, together with the 'RBPdetect_protein_embeddings' notebook can be used to make predictions for protein sequences based on our domain-based, machine-learning-based and/or combined approach. The following steps should be followed:\n",
     "- Prepare a FASTA file with the **protein** sequences you want to make predictions for.\n",
-    "- Download HMMER (http://hmmer.org) and locate its contents (you need the path to it).\n",
+    "- Download HMMER (http://hmmer.org) and locate its contents (you need the path to it, see below).\n",
     "- Make sure all the necessary software packages (*Libraries* below) are installed.\n",
-    "- Compute the necessary protein language embeddings using the 'RBPdetect_protein_embeddings' notebook. This is best done on Kaggle for better performance utilizing GPU computing power. Download the computed embeddings from Kaggle.\n",
-    "- Copy the FASTA file and computed embeddings to the data folder of this GitHub repository. In the data folder, the RBPdetect_XGBmodel.json and RBPdetect_phageRBPs.hmm should also be located.\n",
-    "- Fill in the necessary file names in the second code block.\n",
-    "- Run the code blocks below to make predictions based on the domain-based approach and machine-learning-based approach.\n",
+    "- Compute the necessary protein language embeddings using the 'RBPdetect_protein_embeddings' notebook. This is best done on Kaggle or Google Colab for better performance utilizing GPU computing power. Then save the computed embeddings from Kaggle or Google Colab locally on your computer.\n",
+    "- Copy the FASTA file and computed embeddings to the data folder of this GitHub repository. In the data folder, the RBPdetect_XGBmodel.json and/or RBPdetect_phageRBPs.hmm and/or RBPdetect_XGBhmm.json should also be located.\n",
+    "- Fill in the necessary file names in the second code block below.\n",
+    "- Run the code blocks thereafter to make predictions based on the domain-based approach and/or machine-learning-based approach and/or combined approach.\n",
     "- The resulting dataframe contains a row for each of the protein sequences that was submitted. A binary prediction (0/1) is made for each of the methods. A '0' indicates that the sequence is predicted not to be an RBP, while a '1' indicates that the sequence is predicted as an RBP."
    ]
   },
@@ -25,18 +26,19 @@
    "id": "e17823fc",
    "metadata": {},
    "source": [
-    "#### Libraries and files"
+    "### Libraries and files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "8efac261",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from xgboost import XGBClassifier\n",
     "from Bio import SeqIO\n",
+    "from tqdm.notebook import tqdm\n",
+    "from xgboost import XGBClassifier\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -45,13 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "637d4a12",
    "metadata": {},
    "outputs": [],
    "source": [
     "pfam_file = 'data/RBPdetect_phageRBPs.hmm'\n",
-    "xgb_file = 'data/RBPdetect_xgb_model.json'\n",
+    "xgb_model_embeddings = 'data/RBPdetect_xgb_model.json'\n",
+    "xgb_model_combined = 'data/RBPdetect_xgb_hmm.json'\n",
     "fasta_file = 'data/sequences.fasta'\n",
     "hmmer_path = ... # e.g. '/Users/Sally/hmmer-3.3.1'\n",
     "embeddings_file = ... # e.g. 'data/embeddings.csv'"
@@ -62,7 +65,7 @@
    "id": "2e06594c",
    "metadata": {},
    "source": [
-    "#### Domain-based approach"
+    "### Domain-based approach"
    ]
   },
   {
@@ -152,7 +155,7 @@
    "id": "351a3d1e",
    "metadata": {},
    "source": [
-    "#### Machine-learning-based approach"
+    "### Machine-learning-based approach"
    ]
   },
   {
@@ -176,7 +179,7 @@
    "source": [
     "# load trained model\n",
     "xgb_saved = XGBClassifier()\n",
-    "xgb_saved.load_model(xgb_file)\n",
+    "xgb_saved.load_model(xgb_model_embeddings)\n",
     "\n",
     "# make predictions with the XGBoost model\n",
     "score_xgb = xgb_saved.predict_proba(embeddings)[:,1]\n",
@@ -199,7 +202,7 @@
    "id": "4c2c9ac6",
    "metadata": {},
    "source": [
-    "#### Save predictions of both methods together"
+    "### Save predictions of both methods together"
    ]
   },
   {
@@ -211,6 +214,109 @@
    "source": [
     "results = pd.DataFrame({'domain_based_predictions':domain_preds, 'machine_learning_predictions':preds_xgb})\n",
     "results.to_csv('results_predictions.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f39b0487",
+   "metadata": {},
+   "source": [
+    "### Combined approach XGBoost + HMM scores\n",
+    "\n",
+    "Here, we combine both the embeddings of the proteins and the scores of each protein against all of the collected HMMs. These two types of features are concatenated and finally predictions are made (N.B. as a result, here predictions are made with a different XGBoost model than before)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "13eb81b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define all the blocks we want scores for\n",
+    "new_blocks = ['Phage_T7_tail', 'Tail_spike_N', 'Prophage_tail', 'BppU_N', 'Mtd_N', \n",
+    "           'Head_binding', 'DUF3751', 'End_N_terminal', 'phage_tail_N', 'Prophage_tailD1', \n",
+    "           'DUF2163', 'Phage_fiber_2', 'unknown_N0', 'unknown_N1', 'unknown_N2', 'unknown_N3', 'unknown_N4', \n",
+    "            'unknown_N6', 'unknown_N10', 'unknown_N11', 'unknown_N12', 'unknown_N13', 'unknown_N17', 'unknown_N19', \n",
+    "            'unknown_N23', 'unknown_N24', 'unknown_N26','unknown_N29', 'unknown_N36', 'unknown_N45', 'unknown_N48', \n",
+    "            'unknown_N49', 'unknown_N53', 'unknown_N57', 'unknown_N60', 'unknown_N61', 'unknown_N65', 'unknown_N73', \n",
+    "            'unknown_N82', 'unknown_N83', 'unknown_N101', 'unknown_N114', 'unknown_N119', 'unknown_N122', \n",
+    "            'unknown_N163', 'unknown_N174', 'unknown_N192', 'unknown_N200', 'unknown_N206', 'unknown_N208', \n",
+    "            'Lipase_GDSL_2', 'Pectate_lyase_3', 'gp37_C', 'Beta_helix', 'Gp58', 'End_beta_propel', \n",
+    "            'End_tail_spike', 'End_beta_barrel', 'PhageP22-tail', 'Phage_spike_2', \n",
+    "            'gp12-short_mid', 'Collar', \n",
+    "            'unknown_C2', 'unknown_C3', 'unknown_C8', 'unknown_C15', 'unknown_C35', 'unknown_C54', 'unknown_C76', \n",
+    "            'unknown_C100', 'unknown_C105', 'unknown_C112', 'unknown_C123', 'unknown_C179', 'unknown_C201', \n",
+    "            'unknown_C203', 'unknown_C228', 'unknown_C234', 'unknown_C242', 'unknown_C258', 'unknown_C262', \n",
+    "            'unknown_C267', 'unknown_C268', 'unknown_C274', 'unknown_C286', 'unknown_C292', 'unknown_C294', \n",
+    "            'Peptidase_S74', 'Phage_fiber_C', 'S_tail_recep_bd', 'CBM_4_9', 'DUF1983', 'DUF3672']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "02385ce2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# press the .hmm file for further use\n",
+    "output, err = rbpu.hmmpress_python(hmmer_path, pfam_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0d8ae0c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f06a6f4fb8bb4048b8420b1e98dc0744",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Scanning the proteins:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# get domains & scores\n",
+    "sequences = [str(sequence.seq) for sequence in SeqIO.parse(fasta_file, 'fasta')]\n",
+    "hmm_scores = {item:[0]*len(sequences) for item in new_blocks}\n",
+    "bar = tqdm(total=len(sequences), desc='Scanning the proteins', position=0, leave=True)\n",
+    "for i, sequence in enumerate(sequences):\n",
+    "    hits, scores, biases, ranges = rbpu.hmmscan_python_from_string(hmmer_path, pfam_file, sequence)\n",
+    "    for j, dom in enumerate(hits):\n",
+    "        hmm_scores[dom][i] = scores[j]\n",
+    "    bar.update(1)\n",
+    "bar.close()\n",
+    "hmm_scores_array = np.asarray(pd.DataFrame(hmm_scores))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "a94ff277",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load protein embeddings to make predictions for and concat them with the HMM scores\n",
+    "embeddings_df = pd.read_csv(embeddings_file)\n",
+    "embeddings = np.asarray(embeddings_df.iloc[:, 2:])\n",
+    "features = np.concatenate((embeddings, hmm_scores_array), axis=1)\n",
+    "\n",
+    "# load trained model\n",
+    "xgb_saved = XGBClassifier()\n",
+    "xgb_saved.load_model(xgb_model_combined)\n",
+    "\n",
+    "# make predictions with the XGBoost model\n",
+    "score_xgb = xgb_saved.predict_proba(features)[:,1]\n",
+    "preds_xgb = (score_xgb > 0.5)*1"
    ]
   }
  ],
