--- a/RBPdetect_notebook.ipynb
+++ b/RBPdetect_notebook.ipynb
@@ -2653,6 +2653,138 @@
   },
   {
    "cell_type": "markdown",
+   "id": "70535aad",
+   "metadata": {},
+   "source": [
+    "#### Train a final XGBoost+HMM model on all data to open source on GitHub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "832ef156",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load embeddings\n",
+    "rbps_em = pd.read_csv(data_dir+'/annotated_RBPs_2022-01_embeddings.csv')\n",
+    "nonrbps_em = pd.read_csv(data_dir+'/annotated_nonRBPs_2022-01_embeddings.csv')\n",
+    "rbp_embed = np.asarray(rbps_em.iloc[:, 2:])\n",
+    "nonrbp_embed = np.asarray(nonrbps_em.iloc[:, 2:])\n",
+    "\n",
+    "embeddings = np.concatenate((rbp_embed, nonrbp_embed))\n",
+    "labels = np.asarray([1]*rbp_embed.shape[0] + [0]*nonrbp_embed.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e6b50d32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6176, 8)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load sequences\n",
+    "rbps = pd.read_csv(data_dir+'/annotated_RBPs_2022-01.csv')\n",
+    "nonrbps = pd.read_csv(data_dir+'/annotated_nonRBPs_2022-01.csv')\n",
+    "sequences = list(rbps['DNASeq'])\n",
+    "indices = [i for i, idx in enumerate(nonrbps['protein_id']) if idx in list(nonrbps_em['protein_id'])]\n",
+    "sequences = sequences + list(nonrbps['DNASeq'][indices])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "3a677999",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "41b99789d6f749a28298df273ed61453",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Scanning the genes:   0%|          | 0/67936 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/Caskroom/miniforge/base/envs/ML1/lib/python3.9/site-packages/Bio/Seq.py:2979: BiopythonWarning: Partial codon, len(sequence) not a multiple of three. Explicitly trim the sequence or add trailing N before translation. This may become an error in future.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define all the blocks we want scores for\n",
+    "new_blocks = ['Phage_T7_tail', 'Tail_spike_N', 'Prophage_tail', 'BppU_N', 'Mtd_N', \n",
+    "           'Head_binding', 'DUF3751', 'End_N_terminal', 'phage_tail_N', 'Prophage_tailD1', \n",
+    "           'DUF2163', 'Phage_fiber_2', 'unknown_N0', 'unknown_N1', 'unknown_N2', 'unknown_N3', 'unknown_N4', \n",
+    "            'unknown_N6', 'unknown_N10', 'unknown_N11', 'unknown_N12', 'unknown_N13', 'unknown_N17', 'unknown_N19', \n",
+    "            'unknown_N23', 'unknown_N24', 'unknown_N26','unknown_N29', 'unknown_N36', 'unknown_N45', 'unknown_N48', \n",
+    "            'unknown_N49', 'unknown_N53', 'unknown_N57', 'unknown_N60', 'unknown_N61', 'unknown_N65', 'unknown_N73', \n",
+    "            'unknown_N82', 'unknown_N83', 'unknown_N101', 'unknown_N114', 'unknown_N119', 'unknown_N122', \n",
+    "            'unknown_N163', 'unknown_N174', 'unknown_N192', 'unknown_N200', 'unknown_N206', 'unknown_N208', \n",
+    "            'Lipase_GDSL_2', 'Pectate_lyase_3', 'gp37_C', 'Beta_helix', 'Gp58', 'End_beta_propel', \n",
+    "            'End_tail_spike', 'End_beta_barrel', 'PhageP22-tail', 'Phage_spike_2', \n",
+    "            'gp12-short_mid', 'Collar', \n",
+    "            'unknown_C2', 'unknown_C3', 'unknown_C8', 'unknown_C15', 'unknown_C35', 'unknown_C54', 'unknown_C76', \n",
+    "            'unknown_C100', 'unknown_C105', 'unknown_C112', 'unknown_C123', 'unknown_C179', 'unknown_C201', \n",
+    "            'unknown_C203', 'unknown_C228', 'unknown_C234', 'unknown_C242', 'unknown_C258', 'unknown_C262', \n",
+    "            'unknown_C267', 'unknown_C268', 'unknown_C274', 'unknown_C286', 'unknown_C292', 'unknown_C294', \n",
+    "            'Peptidase_S74', 'Phage_fiber_C', 'S_tail_recep_bd', 'CBM_4_9', 'DUF1983', 'DUF3672']\n",
+    "\n",
+    "# make dictionary for scores\n",
+    "hmm_scores = {item:[0]*len(sequences) for item in new_blocks}\n",
+    "\n",
+    "# get domains & scores (press HMM data first!)\n",
+    "bar = tqdm(total=len(sequences), desc='Scanning the genes', position=0, leave=True)\n",
+    "small_pfam_file = '/Users/Dimi/Documents/GitHub/PhageRBPdetection/data/RBPdetect_phageRBPs.hmm'\n",
+    "for i, sequence in enumerate(sequences):\n",
+    "    hits, scores, biases, ranges = rbpu.gene_domain_scan(hmm_path, small_pfam_file, [sequence])\n",
+    "    for j, dom in enumerate(hits):\n",
+    "        hmm_scores[dom][i] = scores[j]\n",
+    "    bar.update(1)\n",
+    "bar.close()\n",
+    "hmm_scores_array = np.asarray(pd.DataFrame(hmm_scores))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "d0fce358",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train the model\n",
+    "features = np.concatenate((embeddings, hmm_scores_array), axis=1)\n",
+    "imbalance = rbp_embed.shape[0]/nonrbp_embed.shape[0]\n",
+    "xgb_all = XGBClassifier(scale_pos_weight=1/imbalance, n_jobs=6, use_label_encoder=False, \n",
+    "                        max_depth=3, n_estimators=500)\n",
+    "xgb_all.fit(features, labels, eval_metric='logloss')\n",
+    "\n",
+    "# save model\n",
+    "xgb_all.save_model(results_dir+'/RBPdetect_XGBhmm.json')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6f85fe49",
    "metadata": {},
    "source": [
