--- a/RBPdetect_make_predictions.ipynb
+++ b/RBPdetect_make_predictions.ipynb
@@ -7,18 +7,26 @@
    "source": [
     "# Dual identification of novel phage receptor-binding proteins based on protein domains and machine learning\n",
     "\n",
-    "# *Predicting new sequences*\n",
+    "# *Predict new sequences*\n",
     "\n",
+    "This notebook, together with the 'RBPdetect_protein_embeddings' notebook can be used to make predictions for protein sequences based on our domain-based, machine-learning-based and/or combined approach."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c148d1d8",
+   "metadata": {},
+   "source": [
+    "### Instructions\n",
     "\n",
-    "This notebook, together with the 'RBPdetect_protein_embeddings' notebook can be used to make predictions for protein sequences based on our domain-based, machine-learning-based and/or combined approach. The following steps should be followed:\n",
-    "- Prepare a FASTA file with the **protein** sequences you want to make predictions for.\n",
-    "- Download HMMER (http://hmmer.org) and locate its contents (you need the path to it, see below).\n",
-    "- Make sure all the necessary software packages (*Libraries* below) are installed.\n",
-    "- Compute the necessary protein language embeddings using the 'RBPdetect_protein_embeddings' notebook. This is best done on Kaggle or Google Colab for better performance utilizing GPU computing power. Then save the computed embeddings from Kaggle or Google Colab locally on your computer.\n",
-    "- Copy the FASTA file and computed embeddings to the data folder of this GitHub repository. In the data folder, the RBPdetect_XGBmodel.json and/or RBPdetect_phageRBPs.hmm and/or RBPdetect_XGBhmm.json should also be located.\n",
-    "- Fill in the necessary file names in the second code block below.\n",
-    "- Run the code blocks thereafter to make predictions based on the domain-based approach and/or machine-learning-based approach and/or combined approach.\n",
-    "- The resulting dataframe contains a row for each of the protein sequences that was submitted. A binary prediction (0/1) is made for each of the methods. A '0' indicates that the sequence is predicted not to be an RBP, while a '1' indicates that the sequence is predicted as an RBP."
+    "1. Prepare a FASTA file with the **protein** sequences you want to make predictions for.\n",
+    "2. Download HMMER (http://hmmer.org) and locate its contents (you need the path to it, see below).\n",
+    "3. Make sure all the necessary software packages (*Libraries* below) are installed.\n",
+    "4. Compute the necessary protein language embeddings using the 'RBPdetect_protein_embeddings' notebook in the repository. This is best done on Kaggle or Google Colab for better performance utilizing GPU computing power. Then save the computed embeddings from Kaggle or Google Colab locally on your computer.\n",
+    "5. Copy the FASTA file and computed embeddings to the data folder of this repository. In the data folder, the RBPdetect_XGBmodel.json and/or RBPdetect_phageRBPs.hmm and/or RBPdetect_XGBhmm.json should also be located.\n",
+    "6. Fill in the necessary file names in the second code block below.\n",
+    "7. Run all the code blocks sequentially to make predictions based on the domain-based approach and/or machine-learning-based approach and/or combined approach (see different headers below).\n",
+    "8. The resulting dataframe with predictions contains a row for each of the protein sequences that was submitted. A binary prediction (0/1) is made for each of the methods. A '0' indicates that the sequence is predicted not to be an RBP, while a '1' indicates that the sequence is predicted as an RBP."
    ]
   },
   {
@@ -141,11 +149,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "2a604edc",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2edae3c",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# save the domain-based results separately (optionally)\n",
+    "# save the domain-based predictions\n",
     "domain_results = pd.DataFrame(domain_preds, columns=['preds'])\n",
     "domain_results.to_csv('domains_test_predictions.csv', index=False)"
    ]
@@ -187,22 +197,16 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "f9c80d28",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98c97326",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# save predictions and scores (optionally)\n",
+    "# save the embeddings-based predictions and scores\n",
     "xgb_results = pd.concat([pd.DataFrame(preds_xgb, columns=['preds']), \n",
     "                        pd.DataFrame(score_xgb, columns=['score'])], axis=1)\n",
     "xgb_results.to_csv(results_dir+'/xgboost_test_predictions.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4c2c9ac6",
-   "metadata": {},
-   "source": [
-    "### Save predictions of both methods together"
    ]
   },
   {
@@ -212,6 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save predictions of both methods together (optional)\n",
     "results = pd.DataFrame({'domain_based_predictions':domain_preds, 'machine_learning_predictions':preds_xgb})\n",
     "results.to_csv('results_predictions.csv', index=False)"
    ]
