--- a/RBPdetect_notebook.ipynb
+++ b/RBPdetect_notebook.ipynb
@@ -12,7 +12,9 @@
     "1. **Loading and processing data**: getting MillardLab data and extracting annotated RBPs\n",
     "2. **Custom HMM domains**: constructing HMMs for enhanced RBP detection based on protein domains\n",
     "3. **Machine learning models**: constructing a XGBoost classifier to discriminate RBPs from nonRBPs.\n",
-    "4. **Benchmarking against PhANNs**: comparing our methods against PhANNs on hold-out data."
+    "4. **Benchmarking against PhANNs**: comparing our methods against PhANNs on hold-out data.\n",
+    "5. **Combining HMM scores and language embeddings**\n",
+    "6. **Extra**"
    ]
   },
   {
