--- a/RBPdetect_make_predictions.ipynb
+++ b/RBPdetect_make_predictions.ipynb
@@ -312,7 +312,7 @@
    "source": [
     "# load protein embeddings to make predictions for and concat them with the HMM scores\n",
     "embeddings_df = pd.read_csv(embeddings_file)\n",
-    "embeddings = np.asarray(embeddings_df.iloc[:, 2:])\n",
+    "embeddings = np.asarray(embeddings_df.iloc[:, 1:])\n",
     "features = np.concatenate((embeddings, hmm_scores_array), axis=1)\n",
     "\n",
     "# load trained model\n",
@@ -327,7 +327,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('ML1')",
    "language": "python",
    "name": "python3"
   },
@@ -342,6 +342,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "cdf400e2b2cf645b2ec6a448fcb5b3c1b3d3d5834714944466c9c0370880fa51"
+   }
   }
  },
  "nbformat": 4,
